# fast-api-exec

./: .gitignore  README.md  client.py  config.py  docker-compose.yml  main.py  pyproject.toml
Db/: init_session.py  startup.py
Db/Models/: User.py
Db/Repos/: UsersRepo.py
Middleware/: OAuth2Middle.py
ProcManage/: Procces.py  ProcessManager.py
Routers/: Auth.py  uploadImage.py
Services/: AuthService.py  UploadImageService.py
Utils/: Singletone.py
auth/: create_token.py
